--- a/vignettes/build-models.Rmd
+++ b/vignettes/build-models.Rmd
@@ -20,7 +20,19 @@ knitr::include_graphics("framework_build-models.png", dpi = 300)
 
 <br>
 
-In the examples below, generalised linear mixed-effects models (GLMMs) are used, since linear models are generally simpler and provide better interpretability. Do note that other types of models/algorithms may also be used instead. Also, the full list of potential predictor variables may first be narrowed down; for example, random forest models may be used to select variables based on their relative importance in improving model performance (Arthur et al., 2010; Li et al., 2017). 
+First, load the necessary packages used throughout this article:
+
+```{r eval = FALSE}
+library("biodivercity")
+library("tidyverse") # to process/wrangle data
+library("sf") # to process landscape data
+```
+
+```{r load biodivercity while in dev, include = FALSE}
+devtools::load_all()
+library("tidyverse") 
+library("sf") 
+```
  
 <br>
 
@@ -28,31 +40,16 @@ In the examples below, generalised linear mixed-effects models (GLMMs) are used,
 
 ## 1. Local (_Alpha_) diversity
 
-For a chosen animal group, local (_Alpha_) diversity is represented by the number of species recorded at sampling point locations (i.e., species density). The response variable specified within the GLMM is the number (count) of species.
+For a chosen animal group, local (_Alpha_) diversity is represented by the number of species recorded at sampling point locations (i.e., species density). The response variable is the number (count) of species. Generalised linear mixed-effects models (GLMMs) can be used to model count data, and linear models are generally simpler and provide better interpretability. Do note that other types of models/algorithms can also be used to model count data. Also, the full list of potential predictor variables may first be narrowed down; for example, random forest models may be used to select variables based on their relative importance in improving model performance (Arthur et al., 2010; Li et al., 2017). 
 
-First, load the necessary packages:
+Load the necessary packages to model local (_Alpha_) diversity:
 
-```{r load required libraries, message = FALSE, warning = FALSE, eval = FALSE}
-library("biodivercity")
-library("tidyverse") # to process/wrangle data
-library("sf") # to process landscape data
-library("tmap") # spatial visualisation
-
+```{r message = FALSE, warning = FALSE}
 library("lme4") # mixed-effects modelling
 library("MuMIn") # model selection & averaging
 ```
 
-```{r load biodivercity while in dev, include = FALSE}
-devtools::load_all()
-library("tidyverse") 
-library("sf") 
-library("tmap")
-
-library("lme4")
-library("MuMIn")
-```
-
-Load the example datasets for birds (animal group 'Aves') recorded at sampling points across Singapore. `birds` is a dataframe containing the number of species aggregated across multiple surveys (i.e., species richness; column '`sprich`'), and `landscape` is a dataframe containing landscape predictors summarised within specified buffer radii. See `data(animal_surveys)` and `data(points_landscape)` for more details on the animal and landscape data, respectively.
+Load the example datasets for birds (animal group 'Aves') recorded at sampling points across Singapore. `birds` is a dataframe containing the number of species aggregated across multiple surveys (i.e., species richness; column '`sprich`'), and `landscape` is a dataframe containing landscape predictors summarised within specified buffer radii. These example datasets can be obtained by following the steps in `vignette(process-animal)` and `vignette(process-landscape)`, respectively. See `data(animal_surveys)` and `data(points_landscape)` for further details about the underlying animal and landscape data.
 
 ```{r load example data}
 filepath <- system.file("extdata", "build-models_alpha-diversity.Rdata", package="biodivercity")
@@ -61,7 +58,7 @@ load(filepath)
 
 Pivot the `landscape_data` to wide format, with the prefix `r<radius>m_` (representing the radius size) appended to the column names of predictors:
 
-```{r transform and combine data, message = FALSE}
+```{r transform and combine data - alpha, message = FALSE}
 landscape <- landscape %>% 
   pivot_longer(cols = c(starts_with("osm_"), starts_with("lsm_")),
                names_to = 'metric') %>% 
@@ -144,7 +141,7 @@ knitr::kable(bestmodels_info, caption = "**Summary of best models ranked based o
 ```
 We can also visualise the importance (based on sum-of-weights) and effect direction (based on coefficient value) for each variable within the top models:
 
-```{r plot important variables, message = FALSE, dpi = 300, fig.width=5, fig.height=4, fig.align='center', out.width="100%"}
+```{r plot important variables, message = FALSE, dpi = 300, fig.width=5, fig.height=4, fig.align='center', out.width="70%"}
 
 # average the effect of each predictor
 effects <- data.frame(coef(bestmodels_info)[,-1]) %>% 
@@ -205,105 +202,122 @@ rm(birds, birds_scaled, predictors, subset_exp,
 
 ## 2. Community (_Beta_) diversity
 
-Variable selection can first be done prior to building the models for beta diversity. For example, random forest can be performed using the packages `randomForestSRC` and `MultivariateRandomForest`.
+Partial regularised discriminant analysis (RDA) models may be used to model the relationship between animal communities and landscape predictors, while considering the inherent spatial structure of these animal communities. The landscape predictors will be summarised as Principal Component Analysis (PCA) axes, and the spatial variation quantified using Principle Coordinates of Neighbourhood Matrices (PCNM).
 
-Next, partial regularised discriminant analysis (RDA) models may be used to model the relationship between animal communities and landscape predictors, while considering the inherent spatial structure of the animal communities. The landscape predictors will be summarised as Principal Component Analysis (PCA) axes, and the spatial variation quantified using Principle Coordinates of Neighbourhood Matrices (PCNM).
+Similar to the models for local (_Alpha_) diversity, the full list of potential predictor variables may first be narrowed down, for example, by performing random forest modelling using the packages `randomForestSRC` and `MultivariateRandomForest`.
 
-First, load the additional package `vegan`:
+Load the necessary packages to model community (_Beta_) diversity:
 
 ```{r load vegan, message = FALSE, warning = FALSE}
 library("vegan")
 ```
 
-As before, bird and landscape data at sampling points across six areas (towns) in Singapore will be used in this example. The example dataset, `birds`, contains both animal and landscape datasets processed in the previous two articles. The variable selection output using random forest is also loaded as `landscape`.
+As before, bird and landscape data at sampling points across six areas (towns) in Singapore will be used. `bird_com` is a a presence/absence community matrix; for each species (columns) at each sampling point (rows), presence is denoted as `1` while absence is denoted as `0`. `landscape` is a dataframe containing landscape predictors summarised within specified buffer radii. These example datasets can be obtained by following the steps in `vignette(process-animal)` and `vignette(process-landscape)`, respectively.
 
 ```{r load data, message = FALSE, warning = FALSE}
 
 filepath <- system.file("extdata", "build-models_beta-diversity.Rdata", package="biodivercity")
 load(filepath)
 
-data("sampling_points")
+data("sampling_points") # has geolocation information for PCNM analysis
 
 ```
 
-Add the coordinate information for PCNM analysis.
+Pivot the `landscape` data to wide format, with the prefix `r<radius>m_` (representing the radius size) appended to the column names of predictors:
 
-```{r appending spatial information to landscape dataset, message = FALSE, warning = FALSE}
-birds <- birds %>%
-  mutate(Y = {(sampling_points$geometry[match(birds$point_id,sampling_points$point_id)] %>% 
+```{r transform and combine data - beta, message = FALSE}
+landscape <- landscape %>% 
+  pivot_longer(cols = c(starts_with("osm_"), starts_with("lsm_")),
+               names_to = 'metric') %>% 
+  pivot_wider(id_cols = c("point_id"),
+              names_from = c("radius_m", "metric"), 
+              values_from = "value",
+              names_glue = "r{radius_m}m_{metric}") %>% 
+  dplyr::select(where(~!all(is.na(.x)))) # remove cols with all NA
+```
+
+Add geolocation information to `landscape`, in preparation for PCNM analysis:
+
+```{r append spatial information to landscape, message = FALSE, warning = FALSE}
+
+landscape <- landscape %>%
+  mutate(Y = {(sampling_points$geometry[match(landscape$point_id,sampling_points$point_id)] %>% 
                  sf::st_coordinates())[,1]},
          .after = point_id) %>%
-  mutate(X = {(sampling_points$geometry[match(birds$point_id,sampling_points$point_id)] %>% 
+  mutate(X = {(sampling_points$geometry[match(landscape$point_id,sampling_points$point_id)] %>% 
                  sf::st_coordinates())[,2]}, 
          .after = point_id)
+
 ```
 
-Using the variables selected by random forest, we can now perform the principal component analysis (PCA) to summarise the landscape predictors. Retain only PCA axes with eigenvalues greater than one, to select for PCA axes that account for more variance than the original variables on their own.
+Perform principal component analysis (PCA) to summarise the landscape predictors. Retain only PCA axes with eigenvalues greater than one, to select for PCA axes that account for more variance than the original variables on their own.
 
 ```{r diagnosis by PCA}
-pca_birds <- birds %>% 
-  dplyr::select(any_of(landscape$var)) %>% # select impt variables from random forest output
-  prcomp(.,scale.=TRUE) # conduct pca
 
-pca_selected_birds <- pca_birds$x[, which(pca_birds$sdev > 1)]
+landscape_pca <- landscape %>% 
+  dplyr::select(-point_id) %>% # remove unnecessary columns
+  prcomp(., scale.=TRUE)
+
+pca_selected <- landscape_pca$x[, which(landscape_pca$sdev > 1)]
+
 ```
 
 Calculate the PCNM vectors using `vegan::pcnm()` and fit the animal community matrix against these PCNM vectors using `vegan::rda()`. To control for type I error while testing for significant predictors, significant PCNM vectors can first be selected using a backwards, stepwise elimination method until all vectors have a significance level smaller than the chosen significance level of 0.05 (Peres-Neto & Legendre, 2010). This can be performed using `vegan::ordistep()`.
 
 ```{r PCNM, message = FALSE, warning = FALSE, echo = TRUE, results = "hide"}
-plots.xy <- cbind(birds$X, birds$Y)
-raw_pcnm_birds <- pcnm(dist(plots.xy))
 
-pcnm_scores_birds <-data.frame(scores(raw_pcnm_birds))
+plots_xy <- cbind(landscape$X, landscape$Y)
+pcnm_raw <- pcnm(dist(plots_xy))
+
+pcnm_scores <- data.frame(scores(pcnm_raw))
 
 set.seed(123)
-
-birds.pcnm.all <- rda(bird_com~., data = pcnm_scores_birds)
-birds.pcnm.sub <- ordistep(birds.pcnm.all, direction = "backward", pout = 0.075)
+pcnm_all <- rda(bird_com~., data = pcnm_scores)
+pcnm_subset <- ordistep(pcnm_all, direction = "backward", pout = 0.075)
 
 ```
 
-Perform partial RDA with the selected PCA axes as candidate explanatory variables and the significant PCNM vectors as covariates. Perform `vegan::ordistep()` to select for the significant PCA axes while accounting for the effects of the covariables in the model, until all PCA axes have significance level smaller than the chosen significance level of 0.05.
+Perform partial RDA with the selected PCA axes as candidate explanatory variables and the significant PCNM vectors as covariates. Perform `vegan::ordistep()` to select for the significant PCA axes while accounting for the effects of the covariables in the model, until all PCA axes have a significance level smaller than the chosen significance level of 0.05.
 
 ```{r stepwise selection with env vars, message = FALSE, warning = FALSE, echo = TRUE, results = "hide"}
-birds_selected <- cbind(pca_selected_birds, pcnm_scores_birds)
 
-birds.rda.all <- update(birds.pcnm.sub, 
-                        paste0("~. +", {paste((colnames(pca_selected_birds)), collapse=" +")}), # add selected PCA
-                        data = birds_selected)
+predictors_selected <- cbind(pca_selected, pcnm_scores)
 
-birds.rda.sub <- ordistep(birds.rda.all, direction = "backward") # assess p-value for dropping variables
+rda_all <- 
+  update(pcnm_subset, 
+         paste0("~. +", 
+                {paste((colnames(pca_selected)), # add selected PCA
+                       collapse=" +")}), 
+         data = predictors_selected)
+
+rda_subset <- 
+  ordistep(rda_all, direction = "backward") # assess p-value for dropping variables
 
 ```
 
 The final RDA model is fitted with the significant PC axes and PCNM vectors.
 
 ```{r examine rda results and fit final model, message = FALSE, warning = FALSE}
-birds.rda.sub$call
 
-birds.rda.fin <- rda(bird_com ~ PC1 + PC3 + Condition(PCNM1 + PCNM2 + PCNM3 + PCNM4 + PCNM5 + PCNM25), data = birds_selected)
+rda_subset$call
+
+model_rda <- rda(bird_com ~ PC1 + PC3 + Condition(PCNM1 + PCNM2 + PCNM3 + PCNM4 + PCNM5 + PCNM25), data = predictors_selected)
+
 ```
 
-Calculate the average probability of each species occurring across all points. 
+Lastly, calculate the average probability of each species occurring across all points. 
 
 ```{r p-hats}
 p_hats_birds <- apply(bird_com, 2, mean)
 ```
 
-These are the required objects to use the predictive _Beta_-diversity model in the future:
+These are the required objects to use the predictive model for community (_Beta_) diversity in subsequent articles:
 
-1. pca_birds
-2. raw_pcnm_birds
-3. birds.rda.fin
+1. landscape_pca
+2. pcnm_raw
+3. model_rda
 4. p_hats_birds
 
-```{r save beta model objs, eval = FALSE, include = FALSE}
-save(pca_birds,
-     raw_pcnm_birds,
-     birds.rda.fin, 
-     p_hats_birds,
-     file = "./your/working/directory/beta_model_birds.Rdata")
-```
 
 <br>
 
