only include alpha diversity for build/apply models, regenerate site

--- a/vignettes/build-models.Rmd
+++ b/vignettes/build-models.Rmd
@@ -202,122 +202,7 @@ rm(birds, birds_scaled, predictors, subset_exp,
 
 ## 2. Community (_Beta_) diversity
 
-Partial regularised discriminant analysis (RDA) models may be used to model the relationship between animal communities and landscape predictors, while considering the inherent spatial structure of these animal communities. The landscape predictors will be summarised as Principal Component Analysis (PCA) axes, and the spatial variation quantified using Principle Coordinates of Neighbourhood Matrices (PCNM).
-
-Similar to the models for local (_Alpha_) diversity, the full list of potential predictor variables may first be narrowed down, for example, by performing random forest modelling using the packages `randomForestSRC` and `MultivariateRandomForest`.
-
-Load the necessary packages to model community (_Beta_) diversity:
-
-```{r load vegan, message = FALSE, warning = FALSE}
-library("vegan")
-```
-
-As before, bird and landscape data at sampling points across six areas (towns) in Singapore will be used. `bird_com` is a a presence/absence community matrix; for each species (columns) at each sampling point (rows), presence is denoted as `1` while absence is denoted as `0`. `landscape` is a dataframe containing landscape predictors summarised within specified buffer radii. These example datasets can be obtained by following the steps in `vignette(process-animal)` and `vignette(process-landscape)`, respectively.
-
-```{r load data, message = FALSE, warning = FALSE}
-
-filepath <- system.file("extdata", "build-models_beta-diversity.Rdata", package="biodivercity")
-load(filepath)
-
-data("sampling_points") # has geolocation information for PCNM analysis
-
-```
-
-Pivot the `landscape` data to wide format, with the prefix `r<radius>m_` (representing the radius size) appended to the column names of predictors:
-
-```{r transform and combine data - beta, message = FALSE}
-landscape <- landscape %>% 
-  pivot_longer(cols = c(starts_with("osm_"), starts_with("lsm_")),
-               names_to = 'metric') %>% 
-  pivot_wider(id_cols = c("point_id"),
-              names_from = c("radius_m", "metric"), 
-              values_from = "value",
-              names_glue = "r{radius_m}m_{metric}") %>% 
-  dplyr::select(where(~!all(is.na(.x)))) # remove cols with all NA
-```
-
-Add geolocation information to `landscape`, in preparation for PCNM analysis:
-
-```{r append spatial information to landscape, message = FALSE, warning = FALSE}
-
-landscape <- landscape %>%
-  mutate(Y = {(sampling_points$geometry[match(landscape$point_id,sampling_points$point_id)] %>% 
-                 sf::st_coordinates())[,1]},
-         .after = point_id) %>%
-  mutate(X = {(sampling_points$geometry[match(landscape$point_id,sampling_points$point_id)] %>% 
-                 sf::st_coordinates())[,2]}, 
-         .after = point_id)
-
-```
-
-Perform principal component analysis (PCA) to summarise the landscape predictors. Retain only PCA axes with eigenvalues greater than one, to select for PCA axes that account for more variance than the original variables on their own.
-
-```{r diagnosis by PCA}
-
-landscape_pca <- landscape %>% 
-  dplyr::select(-point_id) %>% # remove unnecessary columns
-  prcomp(., scale.=TRUE)
-
-pca_selected <- landscape_pca$x[, which(landscape_pca$sdev > 1)]
-
-```
-
-Calculate the PCNM vectors using `vegan::pcnm()` and fit the animal community matrix against these PCNM vectors using `vegan::rda()`. To control for type I error while testing for significant predictors, significant PCNM vectors can first be selected using a backwards, stepwise elimination method until all vectors have a significance level smaller than the chosen significance level of 0.05 (Peres-Neto & Legendre, 2010). This can be performed using `vegan::ordistep()`.
-
-```{r PCNM, message = FALSE, warning = FALSE, echo = TRUE, results = "hide"}
-
-plots_xy <- cbind(landscape$X, landscape$Y)
-pcnm_raw <- pcnm(dist(plots_xy))
-
-pcnm_scores <- data.frame(scores(pcnm_raw))
-
-set.seed(123)
-pcnm_all <- rda(bird_com~., data = pcnm_scores)
-pcnm_subset <- ordistep(pcnm_all, direction = "backward", pout = 0.075)
-
-```
-
-Perform partial RDA with the selected PCA axes as candidate explanatory variables and the significant PCNM vectors as covariates. Perform `vegan::ordistep()` to select for the significant PCA axes while accounting for the effects of the covariables in the model, until all PCA axes have a significance level smaller than the chosen significance level of 0.05.
-
-```{r stepwise selection with env vars, message = FALSE, warning = FALSE, echo = TRUE, results = "hide"}
-
-predictors_selected <- cbind(pca_selected, pcnm_scores)
-
-rda_all <- 
-  update(pcnm_subset, 
-         paste0("~. +", 
-                {paste((colnames(pca_selected)), # add selected PCA
-                       collapse=" +")}), 
-         data = predictors_selected)
-
-rda_subset <- 
-  ordistep(rda_all, direction = "backward") # assess p-value for dropping variables
-
-```
-
-The final RDA model is fitted with the significant PC axes and PCNM vectors.
-
-```{r examine rda results and fit final model, message = FALSE, warning = FALSE}
-
-rda_subset$call
-
-model_rda <- rda(bird_com ~ PC1 + PC3 + Condition(PCNM1 + PCNM2 + PCNM3 + PCNM4 + PCNM5 + PCNM25), data = predictors_selected)
-
-```
-
-Lastly, calculate the average probability of each species occurring across all points. 
-
-```{r p-hats}
-p_hats_birds <- apply(bird_com, 2, mean)
-```
-
-These are the required objects to use the predictive model for community (_Beta_) diversity in subsequent articles:
-
-1. landscape_pca
-2. pcnm_raw
-3. model_rda
-4. p_hats_birds
-
+In the works...
 
 <br>
 
